--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-icons": "^1.11.4",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
