--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
+    "highcharts": "^12.0.1",
+    "highcharts-react-official": "^3.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
