--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "emailjs-com": "^3.2.0",
     "highcharts": "^12.0.1",
     "highcharts-react-official": "^3.2.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
